cluster/workloads/jellyfin/jellyfin-server.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: jellyfin-server
  namespace: jellyfin
  annotations:
    external-dns.alpha.kubernetes.io/target: ingress.k8s.thaibert.com
spec:
  entryPoints:
    - intweb
    - intwebsecure
  routes:
    - match: "Host(`jellyfin.k8s.thaibert.com`)"
      kind: Rule
      services:
        - name: jellyfin-server
          port: 8096
